# HRR2025

./: .gitignore  LICENSE  README.md  README_UTF8.md  entrypoint.sh  requirements.txt  treinamento_log.txt
src/behavior/: package.xml  setup.cfg  setup.py
src/behavior/roboime_behavior/: behavior_node.py
src/behavior/src/: soccer_behavior.py
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: robot.launch.py
src/bringup/src/: robot.launch.py
src/motion/: CMakeLists.txt  package.xml
src/motion/src/: imu_driver.cpp  walking_controller.py
src/msgs/: CMakeLists.txt  README.md  package.xml
src/msgs/msg/behavior/: GameState.msg
src/msgs/msg/communication/: TeamData.msg
src/msgs/msg/motion/: WalkCommand.msg
src/msgs/msg/navigation/: FieldLandmark.msg  LandmarkArray.msg  LocalizationStatus.msg  RobotPose2D.msg
src/msgs/msg/perception/: BallDetection.msg  FieldDetection.msg  GoalDetection.msg  HybridDetections.msg  LandmarkDetection.msg  RobotDetection.msg  SimplifiedDetections.msg
src/msgs/srv/navigation/: InitializeLocalization.srv
src/navigation/: CMakeLists.txt  package.xml  setup.py
src/navigation/config/: landmark_coordinates.yaml  navigation_config.yaml
src/navigation/include/: ekf_localization.hpp  navigation_coordinator.hpp  particle_filter.hpp
src/navigation/launch/: navigation.launch.py
src/navigation/navigation/: __init__.py  localization_node.py  navigation_manager.py  path_planner_node.py
src/navigation/src/: ekf_localization.cpp  ekf_localization_node.cpp  navigation_coordinator.cpp  navigation_coordinator_node.cpp  particle_filter.cpp  particle_filter_node.cpp
src/perception/: CHANGELOG.md  CMakeLists.txt  DUAL_CAMERA_README.md  QUICKSTART.md  README.md  README_JETSON_CAMERA.md  README_YOLOV5.md  __init__.py  install_trt_deps.sh  package.xml  rosdep.yaml  setup.cfg  setup.py  setup_cuda_tensorflow.sh  setup_jetson.sh  setup_library_links.sh  setup_rosdep.sh  test_perception.sh  test_vision.sh
src/perception/config/: __init__.py  perception_config.yaml  training_config.yaml  vision_params.yaml
src/perception/launch/: README.md  dual_camera.launch.py  jetson_camera.launch.py  jetson_vision.launch.py  launch_utf8.py  perception.launch.py  vision.launch.py  yoeo_detector.launch.py
src/perception/perception/: __init__.py  advanced_3d_pipeline.py  camera_geometry_3d.py  csi_camera_node.py  field_detector.py  goal_detector.py  line_detector.py  usb_camera_node.py  vision_pipeline.py  yoeo_detector_node.py  yolov8_detector_node.py
src/perception/perception/jetson_camera/: jetson_camera_node.py
src/perception/perception/jetson_camera/backup/: jetson_camera_node.py
src/perception/perception/yoeo/: README.md  __init__.py  tensorrt_converter.py  train_ultralytics.py  train_yoeo.py  treinar_yolov4_tiny_darknet.py  yoeo_detector.py  yoeo_handler.py  yoeo_model.py
src/perception/perception/yoeo/components/: ball_component.py  goal_component.py  referee_component.py  robot_component.py
src/perception/perception/yoeo/utils/: __init__.py  data_utils.py  loss_utils.py
src/perception/resource/models/: README.md
src/perception/resources/: README.md  REORGANIZATION_SUMMARY.md  __init__.py  example_usage.py
src/perception/resources/calibration/: camera_info.yaml
src/perception/resources/dataset_darknet/: README.dataset.txt  README.roboflow.txt
src/perception/resources/dataset_darknet/test/: 20250308_131510_jpg.rf.c907d7e5fa413fba5487929708992e8c.txt  20250308_131946_jpg.rf.4ba5118f9ca78e99315932d5a6a90e0b.txt  20250308_131958_jpg.rf.6b5ac6201b52994a4fbd05cb64f47906.txt  20250308_132034_jpg.rf.b79542137b46669214d255ded66723c8.txt  20250308_132046_jpg.rf.6ea8e49dde3863441f6564da9ef7fe7c.txt  _darknet.labels
src/perception/resources/dataset_darknet/train/: 20250308_131348_jpg.rf.1286daaf7b39cfae165b86a3c4cd087d.txt  20250308_131352_jpg.rf.599b5ca0b89842e526c7be1a6d440cb5.txt  20250308_131403_jpg.rf.c5d9a586e4dcb0dbd3b0a9a954330914.txt  20250308_131406_jpg.rf.7330072cd6ee33cf7035af1017ca9d0c.txt  20250308_131415_jpg.rf.23cf77e912c66b290940b420b4b4b01f.txt  20250308_131420_jpg.rf.cce278655db3be59cf74d741be44e5f1.txt  20250308_131421_jpg.rf.142b6029e63c0ac0f43e211c0e8c2d2f.txt  20250308_131427_jpg.rf.c6d012d6321e5405a2da0485a8b306e0.txt  20250308_131437_jpg.rf.c6ef4e1744c80c8fa79dd82f7f95e0fc.txt  20250308_131446_jpg.rf.a132eec869fad0b25a228ad900cd2bc2.txt  20250308_131503_jpg.rf.deb2bb0b193864dfd17d3613170a14d1.txt  20250308_131518_jpg.rf.847a8ccb7810f3471ae43382d2675b23.txt  20250308_131522_jpg.rf.e41bf04ead795a1ac6f359086475fefe.txt  20250308_131545_jpg.rf.ecb18d8eaa327e799ec56d051379cc29.txt  20250308_131950_jpg.rf.91a758bc800d38c990584b6d3543a000.txt  20250308_132002_jpg.rf.e71094d100a72cd34aedbf87f3868523.txt  20250308_132014_jpg.rf.abb43c87fb234b400f70a16ce18cdb15.txt  20250308_132023_jpg.rf.d88450c7432570f144e1392f3bf45a26.txt  20250308_132026_jpg.rf.7fd4a849bbc588714c6c4de50e8c0172.txt  20250308_132030_jpg.rf.d26fe4e0c061a2433ea609fc11d0d467.txt  20250308_132037_jpg.rf.0e8638f666c572058ad469450f016adc.txt  20250308_132052_jpg.rf.1bf533a7e31c733d9b165a412f9e0556.txt  20250308_132055_jpg.rf.2fcce875ae735ac71360b2b63425d51b.txt  20250308_132057_jpg.rf.752988c3d051e8de6f1a94d0e37c5fc8.txt  (+1 more)
src/perception/resources/labels/: detection_classes.txt  segmentation_classes.txt
src/perception/resources/training/: train_model.py
src/perception/scripts/: __init__.py  convert_to_tensorrt.py  csi_camera  direct_camera_test.sh  docker_utf8_setup.sh  fix_utf8_docker.sh  install_image_view.sh  jetson_camera_wrapper.sh  patch_ros2_utf8.py  ros2_utf8  setup_env.sh  usb_camera  vision_pipeline_wrapper.sh  yoeo_detector_node.py  yoeo_visualizer_node.py  yolov8_detector
src/perception/src/: __init__.py  ball_detector.py  field_detector.py  line_detector.py  obstacle_detector.py  vision_pipeline.py  yoeo_detector_node.py
src/perception/src/jetson_camera/: jetson_camera_node.py
src/perception/src/yoeo/: __init__.py  tensorrt_converter.py  test_yoeo.py  train_yoeo.py  yoeo_detector.py  yoeo_handler.py  yoeo_model.py
(+49 files in other folders)
