<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboime_msgs</name>
  <version>1.0.0</version>
  <description>
    Mensagens e servicos customizados para o sistema completo RoboIME HSL2025:
    - Percepcao (YOLOv8 + detectores tradicionais)
    - Navegacao (localizacao + planejamento)  
    - Comportamento (estrategia + comunicacao)
    - Movimento (caminhada + controle)
  </description>
  <maintainer email="keller.felipe@ime.eb.br">RoboIME</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for message generation -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Runtime dependency -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Member of group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
