<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboime_navigation</name>
  <version>0.1.0</version>
  <description>Sistema de navegação para robô de futebol RoboIME - Localização, planejamento e controle</description>
  <maintainer email="keller.felipe@ime.eb.br">RoboIME</maintainer>
  <license>MIT</license>

  <!-- Build tools - Híbrido C++/Python -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen3_cmake_module</depend>
  
  <!-- Python Dependencies -->
  <depend>rclpy</depend>
  
  <!-- Custom messages -->
  <depend>roboime_msgs</depend>

  <!-- Mathematical libraries -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 