<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>2.0.0</version>
  <description>
    Sistema de Percepção Visual RoboIME HSL2025 - YOLOv8 Unificado
    Detecção completa de elementos do futebol robótico usando apenas YOLOv8
    para objetos dinâmicos, estruturas do campo e landmarks de localização.
  </description>
  <maintainer email="keller.felipe@ime.eb.br">RoboIME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- RoboIME custom messages -->
  <depend>roboime_msgs</depend>

  <!-- Computer Vision dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-psutil</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 